// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalSelectionLink does not have global selection values in query 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="http://some.url/"
>
  Go somewhere!
</Link>
`;

exports[`GlobalSelectionLink has global selection values in query 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "http://some.url/",
      "query": Object {
        "environment": "staging",
        "project": Array [
          "foo",
          "bar",
        ],
      },
    }
  }
>
  Go somewhere!
</Link>
`;
